--- a/sass/partials/_syntax.scss
+++ b/sass/partials/_syntax.scss
@@ -34,6 +34,7 @@ html .gist .gist-file {
   margin-bottom: 1.8em;
   position: relative;
   border: none;
+  background-color: red;
   padding-top: image-height("code_bg.png") !important;
   .highlight {
     margin-bottom: 0;
