--- a/source/_includes/custom/asides/gravatar.html
+++ b/source/_includes/custom/asides/gravatar.html
@@ -1,7 +1,7 @@
 {% if site.gravatar_email %}
 <section>
 	<span>
-		<img src="{% gravatar_image %}" alt="Gravatar of {{ site.author}} " title="Gravatar of {{ site.author }}" />
+		<img src="{% gravatar_image %}?s=200" alt="Gravatar of {{ site.author}} " title="Gravatar of {{ site.author }}" class="right" style="display: block" />
 	</span>
 </section>
 {% endif %}
