--- a/sass/base/_theme.scss
+++ b/sass/base/_theme.scss
@@ -12,10 +12,10 @@ $main-bg: #f8f8f8 !default;
 $page-bg: #252525 !default;
 $article-border: #eeeeee !default;
 
-$header-bg: #333 !default;
+$header-bg: #000015 !default;
 $header-border: lighten($header-bg, 15) !default;
-$title-color: #f2f2f2 !default;
-$subtitle-color: #aaa !default;
+$title-color: green !default;
+$subtitle-color: #00aa00 !default;
 
 $text-color: #222 !default;
 $text-color-light: #aaa !default;
