--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -3,8 +3,8 @@ $sans: "PT Sans", "Helvetica Neue", Arial, sans-serif !default;
 $serif: "PT Serif", Georgia, Times, "Times New Roman", serif !default;
 $mono: Menlo, Monaco, "Andale Mono", "lucida console", "Courier New", monospace !default;
 $heading-font-family: "PT Serif", "Georgia", "Helvetica Neue", Arial, sans-serif !default;
-$header-title-font-family: $heading-font-family !default;
-$header-subtitle-font-family: $heading-font-family !default;
+$header-title-font-family: "Andale Mono", monospace;
+$header-subtitle-font-family: $header-title-font-family;
 
 // Fonts
 .heading {
@@ -15,11 +15,11 @@ $header-subtitle-font-family: $heading-font-family !default;
 .mono { font-family: $mono; }
 
 body > header h1 {
-  font-size: 2.2em;
+  font-size: xx-large;
   @extend .heading;
   font-family: $header-title-font-family;
   font-weight: normal;
-  line-height: 1.2em;
+  line-height: 1em;
   margin-bottom: 0.6667em;
 }
 body > header h2 {
@@ -32,13 +32,13 @@ body {
   @extend .serif;
 }
 h1 {
-  font-size: 2.2em;
+  font-size: xx-large;
   line-height: 1.2em;
 }
 
 @media only screen and (min-width: 992px) {
   body { font-size: 1.15em; }
-  h1 { font-size: 2.6em; line-height: 1.2em; }
+  h1 { line-height: 1.2em; }
 }
 
 #{headings()}{
@@ -48,7 +48,7 @@ h1 {
   font-weight: bold;
 }
 h2, section h1 {
-  font-size: 1.5em;
+  //font-size: 1.5em;
 }
 h3, section h2, section section h1 {
   font-size: 1.3em;
