--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -1,4 +1,5 @@
 <section>
   <h1>About Me</h1>
-  <p>Hi, I'm Steve and I like to code.  I'm also a fan of <a href="http://www.crossfit.com">Crossfit</a></p>
+  <p>Hi, I'm Steve and I like to code.  I'm also a fan of <a href="http://www.crossfit.com">Crossfit</a>.</p>
+  <p>...and I'm not Steve Jansen the jazz drummer, just in case you're wondering.
 </section>
