--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -1,5 +1,11 @@
 <section>
   <h1>About Me</h1>
-  <p>Hi, I'm Steve and I like to code.  I'm also a fan of <a href="http://www.crossfit.com">Crossfit</a>.</p>
-  <p>...and I'm not Steve Jansen the jazz drummer, just in case you're wondering.
+  <p>
+    Hi, I'm Steve and I like to code.  
+    I'm into secure coding, so I'm got my (ISC)<sup>2</sup><a href="https://www.isc2.org/csslp/default.aspx">CSSLP</a> in 2012.
+    I'm also an avid fan of <a href="http://www.crossfit.com">Crossfit</a>.
+  </p>
+  <p>
+    And, no, I'm not Steve Jansen the British jazz drummer, just in case you're wondering.</p> 
+  </p>
 </section>
