--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,4 +1,5 @@
 <ul class="main-navigation">
   <li><a href="{{ root_url }}/">Blog</a></li>
   <li><a href="{{ root_url }}/blog/archives">Archives</a></li>
+  <!--<li><a href="{{ root_url }}/guides/windows-batch-scripting/">Guide to Windows Batch Scripting</a></li>-->
 </ul>
