--- a/source/_includes/custom/asides/stackoverflow.html
+++ b/source/_includes/custom/asides/stackoverflow.html
@@ -6,6 +6,7 @@
       <li /><a href="https://github.com/{{site.github_user}}">@{{site.github_user}}</a> on GitHub
     {% endif %}
     <li /><a href="http://stackoverflow.com/users/{{site.stackoverflow_user_id}}/{{site.stackoverflow_user_name}}">@{{site.stackoverflow_user_name}}</a> on StackOverflow
+    <li /><a href="https://coderwall.com/p/u/steve-jansen">@steve-jansen</a> ProTips on Coderwall
     <li /><a href="https://connect.microsoft.com/SQLServer/SearchResults.aspx?UserHandle=steve-jansen">@steve-jansen</a> on Microsft Connect
     <li /><a href="http://aspnet.uservoice.com/users/33548256-steve-jansen">@steve-jansen</a> on ASP.NET User Voice
   </ul>
