fix for gist formatting from https://github.com/imathis/octopress/pull/1435/files

--- a/sass/partials/_syntax.scss
+++ b/sass/partials/_syntax.scss
@@ -2,6 +2,11 @@
   table td.code { width: 100%; }
   border: 1px solid $pre-border !important;
 }
+
+html .gist .gist-file .gist-syntax .highlight .line-data {
+  font-size: 13px;
+}
+
 .highlight .line-numbers, html .gist .gist-file .gist-syntax .highlight .line_numbers {
   text-align: right;
   font-size: 13px;
