--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -8,3 +8,5 @@
 @import "base";
 @import "partials";
 @import "custom/styles";
+@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro);
+@import url(http://fonts.googleapis.com/css?family=Source+Code+Pro);
