--- a/sass/custom/_colors.scss
+++ b/sass/custom/_colors.scss
@@ -2,6 +2,11 @@
 // To give it a try, uncomment some of the lines below rebuild your blog, and see how it works.
 // If you need a handy color picker try http://hslpicker.com
 
+$header-bg: #000015;
+
+$main-bg: #f8f8f8 !default;
+$page-bg: #000015 !default;
+
 //$header-bg: #263347;
 //$subtitle-color: lighten($header-bg, 58);
 //$nav-bg: desaturate(lighten(#8fc17a, 18), 5);
