--- a/source/_includes/custom/asides/stackoverflow.html
+++ b/source/_includes/custom/asides/stackoverflow.html
@@ -9,6 +9,7 @@
     <li /><a href="https://coderwall.com/p/u/steve-jansen">@steve-jansen</a> ProTips on Coderwall
     <li /><a href="https://connect.microsoft.com/SQLServer/SearchResults.aspx?UserHandle=steve-jansen">@steve-jansen</a> on Microsft Connect
     <li /><a href="http://aspnet.uservoice.com/users/33548256-steve-jansen">@steve-jansen</a> on ASP.NET User Voice
+    <li /><a href="{{ site.subscribe_rss }}" title="Subscribe via RSS">Subscribe via RSS</a>
   </ul>
 </section>
 {% endif %}
