--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -1,11 +1,11 @@
 <section>
-  <h1>About Me</h1>
-  <p>
-    Hi, I'm Steve and I like to code.  
-    I'm also an (ISC)<sup>2</sup> <a href="https://www.isc2.org/csslp/default.aspx">CSSLP</a>.
-    More importantly, I'm an avid fan of <a href="http://www.crossfit.com">Crossfit</a>.
+  <p style="clear:both">
+    Hi, I'm Steve.  I'm a software developer loving life in Charlotte, NC,
+    an (ISC)<sup>2</sup> <a href="https://www.isc2.org/csslp/default.aspx">CSSLP</a>
+    and an avid fan of <a href="http://www.crossfit.com">Crossfit</a>.
   </p>
   <p>
     And, no, I'm not Steve Jansen the British jazz drummer, though that does sound like a sweet career.
   </p>
 </section>
+
