--- a/source/_includes/custom/asides/guides.html
+++ b/source/_includes/custom/asides/guides.html
@@ -1,5 +1,5 @@
 <section>
-  <h1>Favorite Posts</h1>
+  <h1>Guides</h1>
   <ul id="recent_posts">
       <li class="post">
         <a href="/guides/windows-batch-scripting/index.html">Guide to Windows Batch Scripting</a>
